--- a/gui/MainWindow.ui
+++ b/gui/MainWindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>640</width>
-    <height>480</height>
+    <height>512</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -79,6 +79,19 @@
       </widget>
      </item>
     </layout>
+   </widget>
+   <widget class="QPushButton" name="test_button">
+    <property name="geometry">
+     <rect>
+      <x>400</x>
+      <y>430</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>test</string>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
