--- a/gui/DialogVariables.ui
+++ b/gui/DialogVariables.ui
@@ -97,7 +97,7 @@
        <item>
         <widget class="QLabel" name="textDomain">
          <property name="text">
-          <string> </string>
+          <string/>
          </property>
         </widget>
        </item>
@@ -113,7 +113,7 @@
        <item>
         <widget class="QLabel" name="text_box2">
          <property name="text">
-          <string> </string>
+          <string/>
          </property>
         </widget>
        </item>
@@ -133,6 +133,19 @@
      </widget>
     </item>
    </layout>
+  </widget>
+  <widget class="QPushButton" name="testButton">
+   <property name="geometry">
+    <rect>
+     <x>590</x>
+     <y>410</y>
+     <width>75</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>TEST</string>
+   </property>
   </widget>
  </widget>
  <resources/>
