--- a/gui/DialogVariableAdd.ui
+++ b/gui/DialogVariableAdd.ui
@@ -46,7 +46,7 @@
      <widget class="QComboBox" name="Domains"/>
     </item>
     <item>
-     <widget class="QListView" name="DomainsList"/>
+     <widget class="QListWidget" name="listWidget"/>
     </item>
     <item>
      <widget class="QPushButton" name="pushButton">
@@ -120,6 +120,19 @@
      <widget class="QLineEdit" name="VarName"/>
     </item>
    </layout>
+  </widget>
+  <widget class="QPushButton" name="testButton">
+   <property name="geometry">
+    <rect>
+     <x>130</x>
+     <y>490</y>
+     <width>75</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>TEST</string>
+   </property>
   </widget>
  </widget>
  <resources/>
