--- a/gui/DialogVariables.ui
+++ b/gui/DialogVariables.ui
@@ -38,6 +38,21 @@
      <height>421</height>
     </rect>
    </property>
+   <column>
+    <property name="text">
+     <string>Имя переменной</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>Означивание</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>Домен</string>
+    </property>
+   </column>
   </widget>
   <widget class="QGroupBox" name="groupBox">
    <property name="geometry">
