--- a/gui/DialogVariables.ui
+++ b/gui/DialogVariables.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>756</width>
+    <width>763</width>
     <height>480</height>
    </rect>
   </property>
@@ -94,7 +94,7 @@
    <property name="geometry">
     <rect>
      <x>510</x>
-     <y>157</y>
+     <y>160</y>
      <width>231</width>
      <height>251</height>
     </rect>
@@ -106,31 +106,11 @@
     <item>
      <widget class="QGroupBox" name="groupBox_3">
       <property name="title">
-       <string>Домен</string>
+       <string>Возможные значения</string>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_3">
        <item>
-        <widget class="QLabel" name="textDomain">
-         <property name="text">
-          <string/>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </widget>
-    </item>
-    <item>
-     <widget class="QGroupBox" name="groupBox_4">
-      <property name="title">
-       <string>Способ означивания</string>
-      </property>
-      <layout class="QVBoxLayout" name="verticalLayout_4">
-       <item>
-        <widget class="QLabel" name="text_box2">
-         <property name="text">
-          <string/>
-         </property>
-        </widget>
+        <widget class="QListWidget" name="domainValues"/>
        </item>
       </layout>
      </widget>
@@ -142,7 +122,7 @@
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_5">
        <item>
-        <widget class="QTextBrowser" name="textBrowser"/>
+        <widget class="QTextBrowser" name="Question"/>
        </item>
       </layout>
      </widget>
