--- a/gui/DialogRecommendation.ui
+++ b/gui/DialogRecommendation.ui
@@ -66,6 +66,19 @@
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
+  <widget class="QPushButton" name="buttonTest">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>430</y>
+     <width>75</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>TEST</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
